cncProd/force-app/main/default/objects/Campaign/fields/Actual_Cost_in_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost_in_Campaign__c</fullName>
    <label>Actual Cost in Campaign</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>