cncProd/force-app/main/default/objects/Campaign/fields/AdditionalGuestPrice__c.field-meta.xml
<CustomField>
    <fullName>AdditionalGuestPrice__c</fullName>
    <description>Price per additional guest.</description>
    <label>Additional Guest Price</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>