cncProd/force-app/main/default/objects/Campaign/fields/Budgeted_Cost_in_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Cost_in_Campaign__c</fullName>
    <label>Budgeted Cost In Campaign</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>