cncProd/force-app/main/default/objects/Campaign/fields/Campaign_ID_18_Char__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID_18_Char__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign ID 18 Char</label>
    <type>Text</type>
</CustomField>