cncProd/force-app/main/default/objects/Campaign/fields/CTA__c.field-meta.xml
<CustomField>
    <fullName>CTA__c</fullName>
    <label>CTA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy Now</fullName>
            </value>
            <value>
                <fullName>Book a Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>