cncProd/force-app/main/default/objects/Campaign/fields/Deep_linking_URL__c.field-meta.xml
<CustomField>
    <fullName>Deep_linking_URL__c</fullName>
    <inlineHelpText>This is for deeplinking via different external comms API interface such as SMS, Email, Push Notification</inlineHelpText>
    <label>Deep linking URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>