cncProd/force-app/main/default/objects/Campaign/fields/Do_Not_Create_Oppty_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Create_Oppty_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If this field is checked, no Opportunity will be created (No Round Robin for Existing Customers).</inlineHelpText>
    <label>Do Not Create Oppty Contact/ExistingCust</label>
    <type>Checkbox</type>
</CustomField>