cncProd/force-app/main/default/objects/Campaign/fields/Event_category_type__c.field-meta.xml
<CustomField>
    <fullName>Event_category_type__c</fullName>
    <label>Event category type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arts  &amp; Culture</fullName>
            </value>
            <value>
                <fullName>Gourmet</fullName>
            </value>
            <value>
                <fullName>Lifestyle workshops</fullName>
            </value>
            <value>
                <fullName>Movies</fullName>
            </value>
            <value>
                <fullName>Driving-related</fullName>
            </value>
            <value>
                <fullName>Family events</fullName>
            </value>
            <value>
                <fullName>Car workshops</fullName>
            </value>
            <value>
                <fullName>Showroom events</fullName>
            </value>
            <value>
                <fullName>Launch events</fullName>
            </value>
            <value>
                <fullName>Partnership events</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>