cncProd/force-app/main/default/objects/Campaign/fields/Fully_Redeemed__c.field-meta.xml
<CustomField>
    <fullName>Fully_Redeemed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fully Redeemed</label>
    <type>Checkbox</type>
</CustomField>