cncProd/force-app/main/default/objects/Campaign/fields/IsExclusive__c.field-meta.xml
<CustomField>
    <fullName>IsExclusive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsExclusive</label>
    <type>Checkbox</type>
</CustomField>