cncProd/force-app/main/default/objects/Campaign/fields/Length_Message__c.field-meta.xml
<CustomField>
    <fullName>Length_Message__c</fullName>
    <inlineHelpText>Auto Generate</inlineHelpText>
    <label>Length Message</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>