cncProd/force-app/main/default/objects/Campaign/fields/Message_Length__c.field-meta.xml
<CustomField>
    <fullName>Message_Length__c</fullName>
    <formula>Length_Message__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Message Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>