cncProd/force-app/main/default/objects/Campaign/fields/Model_Master__c.field-meta.xml
<CustomField>
    <fullName>Model_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model Master</label>
    <referenceTo>Model_Master__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>