cncProd/force-app/main/default/objects/Campaign/fields/Model_Master_ID__c.field-meta.xml
<CustomField>
    <fullName>Model_Master_ID__c</fullName>
    <formula>CASESAFEID( Model_Master__c)</formula>
    <label>Model Master ID</label>
    <type>Text</type>
</CustomField>