cncProd/force-app/main/default/objects/Campaign/fields/Promo_Category__c.field-meta.xml
<CustomField>
    <fullName>Promo_Category__c</fullName>
    <label>Promo Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promotional</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Exclusive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>