cncProd/force-app/main/default/objects/Campaign/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <inlineHelpText>Promo Code. 
This can be fixture or partial fixture promo code</inlineHelpText>
    <label>Promo Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>