cncProd/force-app/main/default/objects/Campaign/fields/Promo_PUSH_Text__c.field-meta.xml
<CustomField>
    <fullName>Promo_PUSH_Text__c</fullName>
    <label>Promo PUSH Text</label>
    <type>TextArea</type>
</CustomField>