cncProd/force-app/main/default/objects/Campaign/fields/Promo_SMS_Text__c.field-meta.xml
<CustomField>
    <fullName>Promo_SMS_Text__c</fullName>
    <label>Promo SMS Text</label>
    <type>TextArea</type>
</CustomField>