cncProd/force-app/main/default/objects/Campaign/fields/Promotion_Type__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Type__c</fullName>
    <label>Promotion Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Time Purchase</fullName>
            </value>
            <value>
                <fullName>Service Package</fullName>
            </value>
            <value>
                <fullName>Merchandise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>