cncProd/force-app/main/default/objects/Campaign/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <label>Target Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public and Targeted</fullName>
            </value>
            <value>
                <fullName>Targeted Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>