cncProd/force-app/main/default/objects/Campaign/fields/TC_Val__c.field-meta.xml
<CustomField>
    <fullName>TC_Val__c</fullName>
    <inlineHelpText>Term &amp; condition for in-app promo. content need to copy &amp; paste from sitecore</inlineHelpText>
    <label>TC_Val</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>