cncProd/force-app/main/default/objects/Campaign/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <label>Guest Unit Price</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>