cncProd/force-app/main/default/objects/Campaign/recordTypes/C_C_Campaign_RT.recordType-meta.xml
<RecordType>
    <fullName>C_C_Campaign_RT</fullName>
    <active>true</active>
    <label>C&amp;C Campaign RT (Event Campaigns)</label>
</RecordType>