cncProd/force-app/main/default/objects/Campaign/recordTypes/C_C_Campaign_RT_Sales_Targeted_Promo.recordType-meta.xml
<RecordType>
    <fullName>C_C_Campaign_RT_Sales_Targeted_Promo</fullName>
    <active>true</active>
    <description>This is the Record Type for Sales Targeted Promotions</description>
    <label>C&amp;C Campaign RT (Sales Targeted Promo)</label>
</RecordType>