cncProd/force-app/main/default/objects/Campaign/recordTypes/Promo_Code_Campaign_RT.recordType-meta.xml
<RecordType>
    <fullName>Promo_Code_Campaign_RT</fullName>
    <active>true</active>
    <label>Promo Code Campaign RT (Warehouse Promotions)</label>
</RecordType>