cncProd/force-app/main/default/objects/Campaign/validationRules/Restriction_on_negative_values.validationRule-meta.xml
<ValidationRule>
    <fullName>Restriction_on_negative_values</fullName>
    <active>true</active>
    <description>a validation rule on the field that does not allow negative values.</description>
    <errorConditionFormula>Actual_Cost_in_Campaign__c  &lt;= 0
&amp;&amp; NOT( $Setup.Bypass_Automation_Settings__c.Bypass_Validation_Rules__c )</errorConditionFormula>
    <errorDisplayField>Actual_Cost_in_Campaign__c</errorDisplayField>
    <errorMessage>Negative values are not allowed.</errorMessage>
</ValidationRule>