cncProd/force-app/main/default/objects/Campaign/listViews/campaigns_CCI.listView-meta.xml
<ListView>
    <fullName>campaigns_CCI</fullName>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>Budgeted_Cost_in_Campaign__c</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CampaignId__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Branch_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch_Code__c</field>
        <operation>equals</operation>
        <value>CCI</value>
    </filters>
    <label>campaigns CCI</label>
    <sharedTo>
        <role>KIAPC_Sales_Manager</role>
    </sharedTo>
</ListView>