cncProd/force-app/main/default/objects/Campaign/listViews/Upsell_Promo.listView-meta.xml
<ListView>
    <fullName>Upsell_Promo</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>Sales_Targeted_Promo_Type__c</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>Model_Master__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Sales Targeted Promo</value>
    </filters>
    <label>Upsell Promos</label>
</ListView>